# ngen-datastream

./: .gitignore  .gitmodules  CREDITS.md  INSTALL.md  README.md  STATUS.md  ami_version.yml  conf_datastream.json  docker-versions.yml  env_validation.yaml  fix_template_substitution.patch  matrix_fix.sh  requirements.txt  t_version.yml  template_fix.yaml  versions.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: nrds-parameter-proposal.md
.github/orchestration-test/: ci.backend.hcl  ci.tfvars  test-execution-payload.json
.github/scripts/: import_terraform_resources.sh  modify_execution.py
.github/vpu-test/: cfe-nom.json  forcing.json  lstm_0.json  routing-only.json
.github/workflows/: QUICK_TEST_CHECKLIST.md  TEST_WORKFLOW_VALIDATION_PLAN.md  build_ami.yml  build_push_tmp_dockers.yaml  build_test_ami_spot_ec2.yml  build_test_create_ami.yml  build_test_docker.yaml  build_test_docker_arm.yaml  build_test_docker_arm.yml  build_test_docker_compose_x86.yaml  build_test_docker_x86.yaml  build_test_docker_x86_version_aware.yml  build_test_ngiab_ami.yaml  build_test_push_docker.yaml  build_test_push_docker_X86_arm_version_aware  build_test_push_docker_X86_arm_version_aware.yaml  build_test_push_docker_arm.yaml  build_test_push_docker_arm.yml  build_test_push_docker_arm_version_aware.yml  build_test_push_docker_x86.yaml  build_test_push_docker_x86_version_aware.yml  cloud-infra.yaml  datastream_python.yaml  datastream_python.yml  deploy-execution-retry.yml  deploy_nrds_output_dashboard.yaml  docker_multi_build_test.yaml  docker_multi_build_test_push.yaml  forcingprocessor.yml  forcingprocessor_aws_sources.yaml  forcingprocessor_gcs_sources.yaml  forcingprocessor_nrds.yaml  forcingprocessor_output_opts.yaml  forcingprocessor_plotting.yaml  forcingprocessor_weights.yaml  health_check.yml  infra_deploy_val.yaml  main.yml  manifest_docker_containers.yaml  orchestration-integration-test.yml  (+74 more)
AWS/: Processor.pem  execution_dailyrun.json  user_data.sh  user_data.txt
AWS/checker/: lambda_function.py
AWS/forcingcommander/: lambda_function.py
AWS/poller/: lambda_function.py
AWS/starter/: lambda_function.py
AWS/stopper/: lambda_function.py
AWS/tarballer/: lambda_function.py
AWS/validator/: lambda_function.py
cloud/: start_up_debian.sh  startup_fedora.sh
cloud/AWS/: execution_dailyrun.json  execution_dailyrun_arm.json  index.html  instance_profile.json  (+2 more)
configs/: conf_datastream_daily.json  conf_datastream_daily.sh  conf_datastream_small.sh  conf_datastream_startNend.sh  conf_datastream_subset.json  conf_datastream_subset.sh  conf_datastream_template.sh
docker/: .dockerignore  Dockerfile.configure  Dockerfile.datastream  Dockerfile.datastream-deps  Dockerfile.forcingprocessor  Dockerfile.validator  README.md  config.json  docker-compose.yml
docs/: BREAKDOWN.md  DATASTREAM_OPTIONS.md  NGEN_MODELS.md  NGEN_MODULES.md  STANDARD_DIRECTORIES.md  USAGE.md  ngen-datastream.pptx
examples/: README.md
forcingprocessor/: Dockerfile  FORCING_SOURCES.md  README.md  conf_nwm_files.json  filenamelist.txt  lambda_handler_poller.py  lambda_handler_starter.py  lambda_handler_tarballbuilder.py  nwm_filenames_generator.py  requirements.txt  requirements311.txt  requirements39.txt  setup.cfg
forcingprocessor/AWS/: lambda_handler_checker.py  lambda_handler_poller.py  lambda_handler_starter.py  lambda_handler_tarballbuilder.py  lambda_handler_validator.py
forcingprocessor/AWS/checker/: lambda_function.py
forcingprocessor/AWS/poller/: lambda_function.py
forcingprocessor/AWS/starter/: lambda_function.py
forcingprocessor/AWS/tarballer/: lambda_function.py
forcingprocessor/AWS/validator/: lambda_function.py
forcingprocessor/configs/: conf.json  conf_dailyrun_template.json  conf_docker.json  conf_fp.json  conf_fp_2019.json  conf_ngen_parallel.json  conf_nwm_files.json  conf_nwmurl_2019.json  conf_nwmurl_operational.json  conf_nwmurl_retro.json  conf_template.json
forcingprocessor/data/weights/: small_weights.json
forcingprocessor/src/: conf.json  conf_docker.json  conf_local.json  dailyrun_template_conf.json  filenamelist.txt  forcingprocessor.py  nwmforcing2ngen.py  template_conf.json  weight_generator.py
forcingprocessor/src/forcingprocessor/: forcingprocessor.py  medium_range_time_ax_mod.py  nwm_filenames_generator.py  plot_forcings.py  processor.py  subset_conus_vpus.py  utils.py  weight_generator.py  weights_hf2ds.py  weights_parq2json.py
forcingprocessor/tests/: conftest.py  test_forcingprocessor.py  test_fp.sh  test_hf2ds.py  test_medium_range_mod.py  test_nrds_fp.py  test_plotter.py
hydrofabric_tools/: subset_conus_vpus.py
infra/aws/python/: README.md  setup.cfg
infra/aws/python/src/research_datastream/: README.md  datastream_cost_nrds.py  nrds_run_health.py  s3mv.py  vpu_comparison_graphs.py
monitoring/: lambda_function.py
python/: README.md  configure-datastream.py  gen_vpu_execs.py  ngen_configs_gen.py  pet_cfe_config_gen.py  requirements311.txt  requirements39.txt  run_validator.py  setup.cfg
python_tools/: setup.cfg
python_tools/src/python_tools/: configure_datastream.py  datastream_cost.py  get_ncatchments_vpu.py  ngen_configs_gen.py  noahowp_pkl.py  plot_datastream.py  run_validator.py
python_tools/tests/: test_bmi_config_generation.py  test_configurer.py  test_validator.py
research_datastream/: CONTRIBUTE.md  README.md  STATUS_AND_METADATA.md
scripts/: README.md  collect_metadata.sh  collect_vpu_run_stats.sh  create_ami.sh  datastream  datastream_guide  docker_builds.sh  install.sh  install_gdal_arm.sh  ngen-datastream  ngen-datastream-parallel.sh  ngen_datastream_parallel.sh  startup_ec2.sh  stream.sh  vpu_run_loop.sh
shell/: create_ami.sh
subsetting/: README.md  geojson_generator.py  requirements.txt  sample.txt  setup.cfg
subsetting/src/subsetting/: __init__.py  ncatch_upstream.py  subset.py  subset_forcing.py
subsetting/tests/: test_subsetting.py
terraform/: ARCHITECTURE.md  AWS_BASICS.md  GETTING_STARTED.md  README.md  execution_dailyrun.json  execution_dailyrun0218.json  main.tf  variables.tfvars
(+448 files in other folders)
