[metadata]
name = forcingprocessor
version = attr: forcingprocessor._version.__version__
author = Jordan J. Laser
author_email = jlaser@lynker.com
description = Tool to convert nwm forcing netcdfs to ngen compatible files
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/CIROH-UA/ngen-datastream
project_urls =
    Source = https://github.com/CIROH-UA/ngen-datastream/forcingprocessor
    Tracker = https://github.com/CIROH-UA/ngen-datastream/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    affine==2.4.0
    asciitree==0.3.3
    attrs==23.1.0
    beautifulsoup4==4.12.2
    bokeh==3.2.0
    boto3==1.28.3
    botocore==1.31.3
    Bottleneck==1.3.7
    certifi==2023.5.7
    cftime==1.6.2
    charset-normalizer==3.2.0
    click==8.1.5
    click-plugins==1.1.1
    cligj==0.7.2
    cloudpickle==2.2.1
    contourpy==1.1.0
    cycler==0.11.0
    dask==2023.7.0
    distributed==2023.7.0
    docopt==0.6.2
    entrypoints==0.4
    fasteners==0.18
    Fiona==1.9.4.post1
    flox==0.7.2
    fonttools==4.41.0
    fsspec==2023.12.0
    geopandas==0.13.2
    gcsfs==2023.12.0
    h5netcdf==1.2.0
    h5py==3.9.0
    h5pyd==0.16.0
    idna==3.4
    importlib-metadata==6.8.0
    importlib-resources==6.0.0
    Jinja2==3.1.2
    jmespath==1.0.1
    kiwisolver==1.4.4
    llvmlite==0.40.1
    locket==1.0.0
    lz4==4.3.2
    MarkupSafe==2.1.3
    matplotlib==3.7.2
    msgpack==1.0.5
    nc-time-axis==1.4.1
    netCDF4==1.6.4
    numba==0.57.1
    numbagg==0.2.2
    numcodecs==0.11.0
    numpy==1.24.4
    numpy-groupies==0.9.22
    nwmurl==0.1.5
    packaging==23.1
    pandas==2.0.3
    partd==1.4.0
    pathlib==1.0.1
    Pillow==10.0.0
    platformdirs==3.8.1
    pooch==1.7.0
    psutil==5.9.5
    pyarrow==12.0.1
    pydap==3.4.1
    pyparsing==3.0.9
    pyproj==3.6.0
    pytest==7.4.3
    python-dateutil==2.8.2
    pytz==2023.3
    PyYAML==6.0
    rasterio==1.3.8
    requests==2.31.0
    rioxarray==0.14.1
    s3fs==0.4.2
    s3transfer==0.6.1
    scipy==1.11.1
    seaborn==0.12.2
    shapely==2.0.1
    six==1.16.0
    snuggs==1.4.7
    sortedcontainers==2.4.0
    soupsieve==2.4.1
    tblib==2.0.0
    toolz==0.12.0
    tornado==6.3.2
    tqdm==4.66.1
    tzdata==2023.3
    urllib3==1.26.16
    WebOb==1.8.7
    xarray==2023.6.0
    xyzservices==2023.7.0
    zarr==2.15.0
    zict==3.0.0
    zipp==3.16.1

python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest