[metadata]
name = forcingprocessor
version = attr: forcingprocessor._version.__version__
author = Jordan J. Laser
author_email = jlaser@lynker.com
description = Tool to convert nwm forcing netcdfs to ngen compatible files
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/CIROH-UA/ngen-datastream
project_urls =
    Source = https://github.com/CIROH-UA/ngen-datastream/forcingprocessor
    Tracker = https://github.com/CIROH-UA/ngen-datastream/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    boto3
    cftime
    exactextract
    gcsfs
    geopandas
    imageio
    matplotlib
    netCDF4
    h5netcdf
    nwmurl
    pandas
    psutil
    pyarrow
    pyogrio
    requests
    s3fs
    scipy
    xarray

python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
