[metadata]
name = python_tools
version = attr: python_tools._version.__version__
author = Jordan J. Laser
author_email = jlaser@lynker.com
description = Python tools for datastream.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/CIROH-UA/ngen-datastream
project_urls =
    Source = https://github.com/CIROH-UA/ngen-datastream/python
    Tracker = https://github.com/CIROH-UA/ngen-datastream/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    geopandas
    h5netcdf
    pandas
    psutil
    pyogrio
    xarray
    scipy
    ngen_config[all] @ git+https://github.com/ciroh-ua/ngen-cal@master#egg=ngen_config&subdirectory=python/ngen_conf
    ngen_init_config[all] @ git+https://github.com/ciroh-ua/ngen-cal@master#egg=ngen_init_config&subdirectory=python/ngen_init_config
    ngen_config_gen[all] @ git+https://github.com/ciroh-ua/ngen-cal@master#egg=ngen_config_gen&subdirectory=python/ngen_config_gen

python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest