[metadata]
name = subsetting
version = attr: subsetting._version.__version__
author = Nels Frazier & Jordan J. Laser
author_email = nels.frazier@noaa.gov & jlaser@lynker.com
description = Tools for downsizing large hydrofabric files into subsets
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/CIROH-UA/ngen-datastream
project_urls =
    Source = https://github.com/CIROH-UA/ngen-datastream/subsetting
    Tracker = https://github.com/CIROH-UA/ngen-datastream/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    pandas
    geopandas

python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest